--- a/.gitignore
+++ b/.gitignore
@@ -107,5 +107,8 @@ typings/
 
 # End of https://www.gitignore.io/api/node,netbeans,visualstudiocode
 
-## ignore draft files
+## Ignore draft files
 *.*_
+
+## Ignore temp file
+tempCodeRunnerFile.js
