--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CSV converter to json",
   "main": "index.js",
   "scripts": {
-    "start": "npx babel-node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rėdas Peškaitis",
@@ -14,16 +14,9 @@
     "url": "https://github.com/re-pe/csv-js.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-transform-modules-umd": "^7.2.0",
-    "@babel/preset-env": "^7.4.2",
-    "babel-eslint": "^9.0.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4"
