--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,5 +24,16 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
         },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Debug",
+            "program": "${workspaceFolder}/index.js",
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node",
+            "runtimeArgs": ["--nolazy"],
+            "env": {
+              "BABEL_ENV": "debug"
+            },
+        }
     ]
 }
