--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CSV converter to json",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "nyc --reporter=text mocha"
+    "start": "npx babel-node index.js",
+    "test": "nyc --reporter=text --require @babel/register mocha"
   },
   "author": "Rėdas Peškaitis",
   "license": "ISC",
