--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.4.3"
   }
 }
