--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CSV converter to json",
   "main": "index.js",
   "scripts": {
-    "start": "npx babel-node index.js",
-    "test": "nyc --reporter=text --require @babel/register mocha"
+    "start": "node index.js",
+    "test": "nyc --reporter=text mocha"
   },
   "author": "Rėdas Peškaitis",
   "license": "ISC",
@@ -14,11 +14,6 @@
     "url": "https://github.com/re-pe/csv-js.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/register": "^7.4.0",
     "chai": "^4.2.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
@@ -27,10 +22,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "mocha": "^6.0.2",
-    "nodemon": "^1.18.10",
     "nyc": "^13.3.0"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.3"
   }
 }
